The Samba-Bugzilla – Bug 9570
Access failure for shares with "force group" or "valid users = @group"
Last modified: 2014-09-03 07:08:27 UTC
Samba4 RC6 smbd returns NT_STATUS_NO_SUCH_GROUP during access to file shares with "force group". Similarly smbd returns NT_STATUS_ACCESS_DENIED for file shares with "valid users = @group". Both issues seem to be caused by a bug in pdb_samba_dsdb.c:pdb_samba_dsdb_getgrfilter, where the objectclass of the group object is examined but not retrived. The code is still present in master.
Created attachment 8443 [details] git formated patch for master
this bug looks quite generic and is here including a patch since quite a while. metze would you like to have a look at this?
This patch fixed the problems I had with "valid users = @group" in samba 4.1.11.
Comment on attachment 8443 [details] git formated patch for master Looks good. Andrew, please have a look and push to master.
Both changes obviously correct. Pushed !
Created attachment 10231 [details] git-am fix for 4.1.next and 4.0.next. Patch that went into master. Applies cleanly to 4.1.next, 4.0.next.
Karolin please apply to 4.1.next, 4.0.next. Thanks ! Jeremy.
*** Bug 10598 has been marked as a duplicate of this bug. ***
Pushed to autobuild-v4-[0|1]-test.
Pushed to both branches. Closing out bug report. Thanks!